--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		]
 	},
 	"dependencies": {
+		"@material-ui/core": "^4.12.3",
 		"bootstrap": "^4.3.1",
 		"firebase": "^8.10.0",
 		"prop-types": "^15.6.1",
